# apexsim

./: .gitignore  CLAUDE.md  IMPLEMENTATION_SUMMARY.md  LICENSE  README.md  mcp-servers.json  server.toml
backend/: Cargo.toml  IMPLEMENTATION.md  NETWORK_IMPLEMENTATION.md  server.toml
backend/content/cars/gt3_generic/: car.toml
backend/src/: config.rs  data.rs  game_session.rs  lib.rs  lobby.rs  main.rs  network.rs  physics.rs  transport.rs
backend/tests/: integration_test.rs
cli-game/: Cargo.toml  client.toml
cli-game/src/: main.rs  protocol.rs
content/cars/: CARDATA.md
content/tracks/: README.md  simple_oval.yaml  street_circuit.json  test_procedural.yaml
docs/: BOUNDED_QUEUES.md  CLI_UI_IMPROVEMENTS.md  COMPLETE_NETWORK_FEATURES.md  NETWORK_IMPLEMENTATION.md  SECURITY_BOUNDED_QUEUES.md  TEST_RESULTS.md  TIMEOUT_ISSUE_ANALYSIS.md  TRACK_CONVERSION_QUICKSTART.md  TRACK_CONVERTER.md  TRACK_FILE_FORMAT.md  TRACK_IMPLEMENTATION.md  TRACK_LOADING_FIX.md  game-modes.md
frontend/: .gitignore  README.md  setup_dev_environment.sh
frontend/Scripts/: build_project.sh
game/: BUILD.md  SETUP.md  launch-unreal.sh  setup_dev_environment.sh  ue-headless-workflow.md  unreal.md
game-cli/: Cargo.toml  README.md
game-cli/src/: client.rs  config.rs  main.rs  protocol.rs
game-godot/: .gitignore  ApexSim.csproj  CLIENT_CONFIG.md  IMPLEMENTATION_STATUS.md  NETWORK_PROTOCOL.md  README.md  client_config.json  project.godot
game-godot/ApexSim.Tests/: ApexSim.Tests.csproj  ProceduralTerrainTests.cs  ProceduralTerrainTests.cs.uid  README.md
game-godot/assets/: loadingscreen.png.import  logo.png.import  menu_background.jpg.import  menu_background.png.import
game-godot/docs/: CAR_AUDIO.md  PROCEDURAL_MAPS.md  PROCEDURAL_MAPS_PLAN.md
game-godot/scenes/: car_card.tscn  car_selection.tscn  car_selection_alt.tscn  connection_dialog.tscn  loading_screen.tscn  main_menu.tscn  session_browser.tscn  session_creation.tscn  session_lobby.tscn  track_card.tscn  track_mesh_test.tscn  track_selection.tscn  track_view.tscn
game-godot/scripts/: loading_screen.gd  loading_screen.gd.uid  main_menu.gd  main_menu.gd.uid  network_client.gd  network_client.gd.uid  protocol.gd  protocol.gd.uid  scene_manager.gd  scene_manager.gd.uid
game-godot/tools/: check_scene_load.gd  check_scene_load.gd.uid  check_scene_load.tscn  run_dialog_test.gd  run_dialog_test.gd.uid  run_dialog_test.tscn
game-ue_57/: .gitignore
game-ue_57/Content/: README.md
game-ue_57/Project/: .gitignore  ApexSim.uproject  SETUP_UI.md
game/Docs/: ARCHITECTURE.md  README.md
game/Project/: ApexSim.code-workspace  ApexSim.uproject  (+2 more)
scripts/: generate_race_line.py  generate_track_previews.py
server/: Cargo.toml  QUICK_START.md  README.md  SPEC.md  ai-driver.md  convert_all_tracks.sh  run-tests.sh  server.toml
server/docs/: NETWORK_IMPLEMENTATION.md
server/examples/: track_export.rs
server/src/: ai_driver.rs  car_loader.rs  config.rs  data.rs  game_session.rs  health.rs  lib.rs  lobby.rs  main.rs  network.rs  physics.rs  replay.rs  track_loader.rs  track_mesh.rs  transport.rs
server/src/procgen/: environment_presets.rs  mod.rs  noise.rs  terrain.rs  world_data.rs
server/tests/: CATEGORIES.md  CHANGELOG.md  FIXES.md  INTERACTIVE_RUNNER.md  README.md  TEST_LIST.md  demo_lap_tests.rs  integration_test.rs  lobby_integration_tests.rs  test_track_load.rs  tls_requirement_test.rs  transport_backpressure_test.rs  udp_security_test.rs
track-editor/: Cargo.toml  trackeditor.md
track-editor/src/: main.rs  track_data.rs  track_mesh.rs
(+168 files in other folders)
