[package]
name = "cli-game"
version = "0.1.0"
edition = "2024"
description = "Command-line client for ApexSim Racing Server"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Network protocol (must match server)
uuid = { version = "1", features = ["v4", "serde"] }
serde = { version = "1", features = ["derive"] }
bincode = "1"

# CLI & configuration
clap = { version = "4", features = ["derive"] }
toml = "0.8"

# Error handling & logging
thiserror = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Input handling
dialoguer = "0.11"
console = "0.15"
